Rev till ca rad 180

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -69,20 +69,20 @@ Senast uppdaterad: `r Sys.Date()`</i>
 
 <ul>
 
-<li>Dalarna har en negativ befolkningsutveckling över tid med allt fler äldre inrikes födda och allt färre i arbetsför ålder. De senaste decenniernas invandring har bromsat den negativa utvecklingen, bidragit till en föryngring av befolkningen och arbetsmarknadens kompetensförsörjning</li>
+<li>Folkmängden i Dalarna har minskat över tid, och medelåldern har stigit bland de inrikes födda. Med allt fler äldre och allt färre i arbetsför ålder bland inrikes födda har de senaste decenniernas invandring haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
 
-<li>Utvecklingen på arbetsmarknaden för utrikes födda under senare år är mycket positiv med nästan en halvering av arbetslösheten sedan 2020. Den förbättrade sysselsättningen ger i sin tur en positiv utveckling för utrikes födda i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktigt för utbildning och etablering på arbetsmarknaden</li>
+<li>Arbetslösheten bland utrikes födda har historiskt varit högre än bland inrikes födda, men utvecklingen under senare år för utrikes födda visar på en markant positiv utveckling - arbetslösheten bland utrikes födda har nästan halverats sedan år 2020. Med den ökade sysselsättningen ses en positiv utveckling också i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd bland utrikes födda. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktiga för utbildning och etablering på arbetsmarknaden.</li>
 
-<li>Högre utbildningsnivåer samt längre vistelsetider i Sverige för utrikes födda har en markant positiv effekt när det gäller att minska skillnaderna i utbildningssystemet och på arbetsmarknaden mot inrikes födda, men det finns trots det kvarstående skillnader i form av exempelvis lägre gymnasiebehörigheter, högre arbetslöshet och lägre inkomster</li>
+<li>Faktorer som minskar skillnaderna på arbetsmarknaden mellan utrikes födda och inrikes födda är framförallt höjda utbildningsnivåer och längre vistelsetid i Sverige. Men det finns kvarstående skillnader i form av exempelvis lägre gymnasiebehörigheter, högre arbetslöshet och lägre inkomster.</li>
 
-<li>Sammantaget observeras en mycket positiv utveckling, men de kvarstående skillnaderna visar på vikten av ett fortsatt integrationsarbete med fokus på språk, utbildning och arbete för att minska skillnader mellan inrikes och utrikes födda</li>
+<li>Sammantaget ses en mycket positiv utveckling i Dalarna, men de kvarstående skillnaderna visar på vikten av ett fortsatt integrationsarbete med fokus på språk, utbildning och arbete för att minska skillnader mellan inrikes och utrikes födda.</li>
 
 </ul>
 
 # Inledning {-}
 I år är det 10 år sedan året då Sverige registrerade det högsta antalet asylsökande genom tiderna. 2015 sökte närmare 163 000 personer asyl i Sverige och för Dalarnas del blev 2016 det år då invandringen var som störst efter att de asylsökande fått uppehållstillstånd och folkbokförts i länet. 
 
-I november 2015 uttryckte regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken. Regeringen var trots det tydlig med att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och bedömde att beredskapen brast i vissa avseenden, men att kärnuppdraget ändå i huvudsak kunde genomföras. 
+I november 2015 uttryckte regeringen att trycket var stort på det svenska samhället och att Sverige behövde "ett andrum för svenskt flyktingmottagande". I och med det skärptes migrationspolitiken. Regeringen var trots det tydlig med att det stora mottagandet skulle "vara en stolthet för oss när historien skrivs" [(Sveriges Radio, 2015)](https://www.sverigesradio.se/artikel/6310364){target="_blank"}^[Sveriges Radio, 2015. Regeringens besked om skärpt flyktingpolitik, 2015-11-25.]. [Riksrevisionen (2017)](https://www.riksdagen.se/sv/dokument-och-lagar/dokument/riksrevisionens-granskningsrapport/lardomar-av-flyktingsituationen-hosten-2015-_h5b54/){target="_blank"}^[Riksrevisionen, 2017. Granskningsrapport 2017:4, Lärdomar av flyktingsituationen hösten 2015 - beredskap och hantering.] granskade de centrala offentliga aktörernas beredskap och bedömde att beredskapen brast i vissa avseenden, men att kärnuppdraget ändå i huvudsak kunnat genomföras. 
 
 År 2019 publicerade Region Dalarna rapporten [Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv](https://www.regiondalarna.se/contentassets/d845727dbc9f49c3b7b09a2c60456497/integrationsanalys.pdf){target="_blank"}^[Region Dalarna, 2019. Nulägesbeskrivning av integrationen i Dalarna, ett regionalt perspektiv. Regionala utvecklingsförvaltningens rapportserie #1.]. Rapporten skrevs med syfte att följa upp hur den höga asylinvandringen till Sverige och Dalarna påverkat länet. År 2016 registrerades cirka 30 000 asylsökande och fram till pandemin registrerades mellan 20-30 000 årligen. År 2024 hade asylinvandringen minskat till cirka 10 000, en nivå som är den lägsta sedan 1996, och en del i det paradigmskifte som nuvarande regering verkar för, med ambitioner att öka arbetskraftsinvandringen och minska asylinvandringen [(Regeringen, 2025)](https://www.regeringen.se/pressmeddelanden/2025/01/pressbriefing-om-migrationen-till-sverige-under-2024/){target="_blank"}^[Regeringen. Pressbriefing om migrationen till Sverige under 2024. 2025-01-10.].
 
@@ -108,26 +108,26 @@ Beroende på sammanhang kan integration ha olika betydelser:
 
 [Amnå och Stigendal (2021)](https://mau.diva-portal.org/smash/get/diva2:1599404/FULLTEXT01.pdf){target="_blank"}^[Amnå, E. och Stigendal, M., 2021. Samhällsorientering: för en hållbar integration. Komlitt AB, Helsingborg.] betonar vikten av att vara tydlig vid användningen av begrepp kopplade till integration och hänvisar till Nationalencyklopedins definition - *integration är en process som leder till att skilda enheter förenas, men det kan även gälla resultatet av en sådan process* - och sociologins användning av begreppen strukturell och kulturell integration.
 
-Den strukturella integrationen handlar om skyldigheter och rättigheter via samhälleliga system, lagar och regler. Den kulturella integrationen handlar mer om hur människor upplever sig som integrerade via normer, värderingar och identiteter. En känsla av delaktighet skapar kulturell integration medan en lag skapar strukturell integration. I grunden handlar det här om alla individer som lever i ett land, även om den vardagliga diskussionen i mångt och mycket handlar om invandrade i förhållande till de som är födda och uppväxta i ett land.
+Strukturell integration handlar om skyldigheter och rättigheter via samhälleliga system, lagar och regler. Kulturell integration handlar istället om människors upplevelse av samhörighet genom normer, värderingar och identiteter. En känsla av delaktighet skapar kulturell integration medan en lag skapar strukturell integration. I grunden handlar det här om integreringen av alla individer som lever i ett land, även om den vardagliga diskussionen i mångt och mycket handlar om invandrade i förhållande till de som är födda och uppväxta i ett land.
 
 </div>
  
 </details>
 
-Även om integrationsbegreppet är brett, präglas samhällsdebatten av hur utrikes födda ska integreras i det svenska samhället. Det gör att det är viktigt att belysa hur utrikes födda förhåller sig till inrikes födda inom ett antal samhällsområden. Samhällets förmåga att intregrera utrikes födda i utbildning, arbetsmarknad eller boende är avgörande för exempelvis kompetensförsörjningen på kort och lång sikt. 
+Även om integrationsbegreppet är brett, präglas samhällsdebatten av hur utrikes födda ska integreras i det svenska samhället. Det gör att det är viktigt att belysa utrikes föddas förutsättningar och utveckling i jämförelse med inrikes födda på ett antal samhällsområden så som utbildning, arbetsmarknad och boende, områden som är avgörande för exempelvis kompetens- och arbetskraftsförsörjningen på kort och lång sikt. 
 
-Den här rapportens syfte är att redovisa aktuell statistik relaterat till utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Som utgångspunkt finns 2019 års rapport, men en anpassning till dagens situation och kunskap görs i stor utsträckning. Rapporten kommer inte att behandla frågor som rör invandringens påverkan på de offentliga finanserna eller utrikes föddas inblandning i brottslighet. För den som är intresserad av att läsa mer om dessa områden rekommenderas rapporter från [Konjunkturinstitutet](https://www.konj.se/media/kpgnt5iw/specialstudie-117-invandrades-nettobidrag-till-de-offentliga-finanserna-1983-2022.pdf){target="_blank"} och [Brottsförebyggande rådet](https://bra.se/rapporter/arkiv/2021-08-25-misstankta-for-brott-bland-personer-med-inrikes-respektive-utrikes-bakgrund){target="_blank"}.
+Den här rapportens syfte är att redovisa aktuell statistik som kan bidra till förståelsen för utrikes föddas integration i samhället i Dalarna och visa på utvecklingen över tid. Som utgångspunkt finns 2019 års rapport, med anpassningar till dagens situation och kunskapsläge. Rapporten kommer inte att behandla frågor som rör invandringens påverkan på de offentliga finanserna eller utrikes föddas inblandning i brottslighet. För den som är intresserad av att läsa mer om dessa områden rekommenderas rapporter från [Konjunkturinstitutet](https://www.konj.se/media/kpgnt5iw/specialstudie-117-invandrades-nettobidrag-till-de-offentliga-finanserna-1983-2022.pdf){target="_blank"} och [Brottsförebyggande rådet](https://bra.se/rapporter/arkiv/2021-08-25-misstankta-for-brott-bland-personer-med-inrikes-respektive-utrikes-bakgrund){target="_blank"}.
 
-I Region Dalarnas rapport från 2019 konstaterades bland annat att det fanns en tydlig skiljelinje mellan hur väl integrationsprocessen fungerar för gruppen utrikes födda å ena sidan, och inrikes födda med utrikes födda föräldrar respektive inrikes födda med inrikes födda föräldrar å andra sidan. Skillnaden i förutsättningar och förmåga mellan de inrikes födda, oavsett om de hade inrikes eller utrikes födda föräldrar, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Distinktionen i denna rapport belyser därför primärt utrikes födda i jämförelse med inrikes födda. En uppdelning sker även för kvinnor och män i de delar det är relevant, som exempelvis utbildningsnivåer samt vistelsetid i landet. I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
+I Region Dalarnas rapport från 2019 konstaterades bland annat att den största skiljelinjen fanns mellan hur väl integrationsprocessen fungerar för gruppen utrikes födda å ena sidan, och inrikes födda å andra sidan oavsett om de inrikes födda har utrikes eller inrikes födda föräldrar. Skillnaden i förutsättningar och förmåga mellan de inrikes födda, oavsett föräldrarnas bakgrund, var relativt liten när det gäller skolresultat och sysselsättningsgrad. Denna rapport belyser därför primärt utrikes födda i jämförelse med inrikes födda. En uppdelning sker även för kvinnor och män i de delar det är relevant, som exempelvis utbildningsnivåer samt vistelsetid i landet. I vissa diagram används även begreppet *Född i Sverige*, vilket ska likställas med inrikes född.
 
 # Befolkningsutveckling och invandring
-Sverige är sedan en längre tid inne i en demografisk fas där de stora babyboom-kullarna från slutet av 1940- och början av 1950-talet uppnåt pensionsålder och nästa generation från 1960-talet börjar närma sig pension. Många svenska kommuner har en alltmer ålderstigen befolkning, en effekt av den urbaniseringsvåg som pågått sedan tidigt 1900-tal, då många unga lämnat landsbygden och mindre tätorter till förmån för residens- och universitetsstäder. Förutom att befolkningsutvecklingen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett stort kompetensförsörjningsproblem.
+Sverige är sedan en längre tid inne i en demografisk fas där de stora babyboom-kullarna från slutet av 1940- och början av 1950-talet uppnåt pensionsålder och nästa generation från 1960-talet börjar närma sig pension. Många svenska kommuner har en alltmer ålderstigen befolkning, en effekt av den urbaniseringsvåg som pågått sedan tidigt 1900-tal, då många unga lämnat landsbygden och mindre tätorter till förmån för residens- och universitetsstäder. Förutom att befolkningsutvecklingen medför färre skattebetalare som ska försörja allt fler äldre så innebär den också ett stort arbetskraftsproblem.
 
 En stor andel äldre i befolkningen medför ekonomiska påfrestningar för en kommun då allt färre i arbetsför ålder ska försörja dem som inte förvärvsarbetar, det vill säga äldre och barn. Redan i [Långtidsutredningen (2015)](https://www.regeringen.se/contentassets/86d73b72a97345feb2a8cbc8b6700fa7/sou-2015104-langtidsutredningen-2015-huvudbetankande/){target="_blank"}^[Regeringen, 2015. Långtidsutredningen 2015, Statens Offentliga Utredningar 2015:104.] gjordes beräkningar på hur mycket kommunalskatten skulle behöva höjas i kommunerna för att upprätthålla samma servicenivå år 2040 som då, som en följd av den förändrade demografiska strukturen. Beräkningarna visade på cirka 50-procentiga ökningar, i mångas ögon orimliga skattehöjningar, vilket kan ses som en signal på hur allvarlig situationen var redan för tio år sedan.  
 
 I [Långtidsutredningen (2019)](https://www.regeringen.se/contentassets/ec035a7de89549eaacc14d82f54b4396/sou-2019_65_webb.pdf){target="_blank"}^[Regeringen, 2019. Långtidsutredningen 2019, Statens Offentliga Utredningar 2019:65.] beräknas statsbidragen till kommunsektorn, vid oförändrade kommunalskatter, behöva nästan fördubblas fram till 2035 för att möta den demografiskt betingade efterfrågan på kommunala tjänster. Utmaningen ligger dock inte främst i finansieringen, utan i att hitta arbetskraften. Störst brist på personal förväntas uppstå i landsbygdsregioner, vilket riskerar att leda till ökad ojämlikhet i levnadsförhållanden och utvecklingsmöjligheter.
 
-Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_min_ar` procent år `r andel_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet i samband med den stora flyktingströmmen och invandringen till Sverige och Dalarna. Utrikes födda har blivit en förutsättning för att kunna kompetensförsörja arbetsmarknaden i Dalarna. 
+Andelen utrikes födda som är i arbetsför ålder (20-64 år) i Dalarna har ökat successivt över de senaste 20 åren, från `r andel_utrikes_min_ar` procent år `r andel_utrikes_inrikes_min_ar` till `r andel_utrikes_max_ar` procent år `r andel_utrikes_inrikes_max_ar`. Ökningen var särskilt tydlig under några år på mitten av 2010-talet i samband med den stora flyktingströmmen och invandringen till Sverige och Dalarna. Utrikes födda har blivit en förutsättning för att kunna arbetskraftsförsörja arbetsmarknaden i Dalarna. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center'}
 gg_andel_utrikes_inrikes$befolkning_utr_inr_andel_Dalarna
@@ -170,7 +170,7 @@ Efter år 2015 har antalet ansökningar om asyl i Sverige minskat. Anledningarna
 gg_asylsokande_antal$asylsokande_antal
 ```
 
-Ett stort antal asylsökande ett år leder ofta till att invandringen ökar året därpå. Det beror på att asylsökande räknas som invandrade först när de har fått uppehållstillstånd och folkbokförts i Sverige. Detta gör att antalet immigranter i hög grad påverkas av hur många beslut om uppehållstillstånd Migrationsverket fastställer, samt hur stor andel av dessa ärenden som blir beviljade. Rekordnivån för antalet asylsökande år 2015, ledde till att invandringen slog rekord i Sverige år 2016. Även statistiken för åren 2017 och 2018 påverkades av det stora antalet asylsökande år 2015. Detta eftersom många fick vänta länge på beslut om huruvida de fick stanna i landet, och för att anhöriga till de som fick uppehållstillstånd sedan ville flytta till Sverige.
+Ett stort antal asylsökande ett år leder ofta till att invandringen ökar året därpå. Det beror på att asylsökande räknas som invandrade först när de har fått uppehållstillstånd och folkbokförts i Sverige. Detta gör att antalet immigranter i hög grad påverkas av hur många beslut om uppehållstillstånd Migrationsverket fastställer, samt hur stor andel av dessa ärenden som blir beviljade. Rekordnivån för antalet asylsökande år 2015, ledde till att invandringen slog rekord i Sverige år 2016. Även antalet invandrade enligt statistiken åren 2017 och 2018 kan i stor grad härledas till det stora antalet asylsökande år 2015. Det handlar både om att många fick vänta länge på beslut om huruvida de fick stanna i landet, och för att anhöriginvandringen sedan har ökat till dem som fick uppehållstillstånd.
 
 </div>
  
