Korr till rad 2018.

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -69,7 +69,7 @@ Senast uppdaterad: `r Sys.Date()`</i>
 
 <ul>
 
-<li>Folkmängden i Dalarna har minskat över tid, och medelåldern har stigit bland de inrikes födda. Med allt fler äldre och allt färre i arbetsför ålder bland inrikes födda har de senaste decenniernas invandring haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
+<li>Folkmängden i Dalarna har de senaste tre decennierna varierat mellan 275 tusen som lägst år 2007 och 288 tusen som högst år 2021. Men antalet inrikes födda har stadigt minskat samtidigt som medelåldern har stigit. Med allt fler äldre och allt färre i arbetsför ålder bland inrikes födda har de senaste decenniernas invandring haft en tydlig positiv effekt genom att både bromsa den negativa befolkningsutvecklingen och bidra till en föryngring och därmed arbetskraftsförsörjning.</li>
 
 <li>Arbetslösheten bland utrikes födda har historiskt varit högre än bland inrikes födda, men utvecklingen under senare år för utrikes födda visar på en markant positiv utveckling - arbetslösheten bland utrikes födda har nästan halverats sedan år 2020. Med den ökade sysselsättningen ses en positiv utveckling också i form av förbättrad ekonomi, minskad trångboddhet och färre i behov av ekonomiskt stöd bland utrikes födda. Däremot har genomströmningstiden för godkänt i SFI ökat det senaste decenniet, vilket behöver adresseras då språkkunskaperna är viktiga för utbildning och etablering på arbetsmarknaden.</li>
 
@@ -170,7 +170,7 @@ Efter år 2015 har antalet ansökningar om asyl i Sverige minskat. Anledningarna
 gg_asylsokande_antal$asylsokande_antal
 ```
 
-Ett stort antal asylsökande ett år leder ofta till att invandringen ökar året därpå. Det beror på att asylsökande räknas som invandrade först när de har fått uppehållstillstånd och folkbokförts i Sverige. Detta gör att antalet immigranter i hög grad påverkas av hur många beslut om uppehållstillstånd Migrationsverket fastställer, samt hur stor andel av dessa ärenden som blir beviljade. Rekordnivån för antalet asylsökande år 2015, ledde till att invandringen slog rekord i Sverige år 2016. Även antalet invandrade enligt statistiken åren 2017 och 2018 kan i stor grad härledas till det stora antalet asylsökande år 2015. Det handlar både om att många fick vänta länge på beslut om huruvida de fick stanna i landet, och för att anhöriginvandringen sedan har ökat till dem som fick uppehållstillstånd.
+Ett stort antal asylsökande ett år leder ofta till att invandringen ökar året därpå. Det beror på att asylsökande räknas som invandrade först när de har fått uppehållstillstånd och folkbokförts i Sverige. Detta gör att antalet immigranter i hög grad påverkas av hur många beslut om uppehållstillstånd som Migrationsverket fastställer, samt hur stor andel av dessa ärenden som blir beviljade. Rekordnivån för antalet asylsökande år 2015, ledde till att invandringen slog rekord i Sverige år 2016. Även antalet invandrade enligt statistiken åren 2017 och 2018 kan i stor grad härledas till det stora antalet asylsökande år 2015. Det handlar både om att många fick vänta länge på beslut om huruvida de fick stanna i landet, och för att anhöriginvandringen sedan har ökat till dem som fick uppehållstillstånd.
 
 </div>
  
@@ -185,7 +185,7 @@ gg_antal_utrikes$utrikes_inrikes_antal_Dalarna
 ```
 <br>
 
-På kommunnivå ökade befolkningen totalt sett i 8 av länets kommuner mellan år 2000–2024, medan den minskade i 7 av dem (se det vänstra diagrammet nedan). Antalet utrikes födda personer har under tidsperioden ökat i Dalarnas läns samtliga kommuner, medan antalet inrikes födda personer har minskat i alla kommuner förutom Falun och Gagnef. Slutsatsen blir att de kommuner i länet som har växt i invånarantal, med undantagen Falun och Gagnef, har gjort det som en följd av invandring, medan de kommuner som krympt har begränsat befolkningsminskningen genom att fler har invandrat än utvandrat. Noteras bör även att utrikes föddas barn ingår i kategorin inrikes födda. Ökningen av antalet utrikes födda var i relation till befolkningsmängd störst i Hedemora, Avesta, Ludvika och Borlänge. 
+På kommunnivå ökade befolkningen totalt sett i åtta av länets kommuner mellan år 2000–2024, medan den minskade i sju av dem (se det vänstra diagrammet nedan). Antalet utrikes födda personer har under tidsperioden ökat i Dalarnas läns samtliga kommuner, medan antalet inrikes födda personer har minskat i alla kommuner förutom Falun och Gagnef. Slutsatsen blir att de kommuner i länet som har växt i invånarantal, med undantagen Falun och Gagnef, har gjort det som en följd av invandring, medan de kommuner som krympt har begränsat befolkningsminskningen genom att fler har invandrat än utvandrat. Noteras bör även att utrikes föddas barn ingår i kategorin inrikes födda. Ökningen av antalet utrikes födda var i relation till befolkningsmängd störst i Hedemora, Avesta, Ludvika och Borlänge. 
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height=5, fig.width=8, fig.align='center',include=FALSE}
 gg_antal_utrikes$befolkningsforandring_Dalarna
@@ -204,7 +204,7 @@ gg_kombo
 
 Andelen utrikes födda har ökat i samtliga av Dalarnas kommuner mellan `r andel_utrikes_forsta_ar` och `r andel_utrikes_senaste_ar`, vilket kommer av att invandringen varit större än utvandringen under hela 2000-talet, samtidigt som antalet inrikes födda minskat i de flesta kommuner. Hur stor ökningen varit skiljer dock tydligt mellan kommunerna. I `r andel_utrikes_kommun_hogst_sista_ar` har andelen utrikes födda exempelvis ökat med `r andel_utrikes_kommun_hogst_forandring_varde` procentenheter sedan  `r andel_utrikes_forsta_ar`, medan ökningen har varit klart lägre i näraliggande Smedjebacken (ungefär `r andel_utrikes_smedjebacken_forandring_varde` procentenheter under samma tidsperiod) eller Gagnef (ungefär `r andel_utrikes_Gagnef_forandring_varde` procentenheter).
 
-För att förstå befolkningsutvecklingen i Dalarna är det även viktigt att undersöka de delar som, vid sidan om invandringen, påverkar befolkningsutvecklingen; födelseöverskottet och den inrikes flyttningen.
+För att förstå befolkningsutvecklingen i Dalarna är det även viktigt att undersöka de beteendemönster som, vid sidan om invandringen, påverkar befolkningsutvecklingen; födelseöverskottet och den inrikes flyttningen.
 
 Mellan år `r befforandring_komponent_min_ar` och `r befforandring_komponent_max_ar` har antalet döda i Dalarna varit fler än antalet födda och antalet utflyttade till övriga Sverige har varit fler än antalet inflyttade från övriga Sverige. Totalt flyttade `r inrikes_flyttningsoverskott_netto` personer netto från Dalarna till andra delar av Sverige under perioden, medan det dog `r fodelseunderskott_netto` fler personer än det föddes. Under samma period var invandringsöverskottet `r invandringsoverskott_netto` personer. Att Dalarnas befolkning har växt under 2000-talet beror således på att invandringen har varit relativt stor.
 
@@ -213,7 +213,7 @@ gg_befforandring_komponenter$`befolkningsforandring_per_komponent_Dalarnas län_
 ```
 <br>
 
-Födelseunderskottet minskade successivt från år 2000 och fram till 2019, för att därefter öka kraftigt fram till 2024. Utvecklingen till 2019 beror i stor grad på att de stora ålderskullar som föddes runt 1990 befann sig i barnafödande åldrar, samt en generös familje- och socialpolitik och en stor invandring. De som invandrade till Dalarna i mitten av 2010-talet var generellt sett unga och i en ålder när det är vanligt att skaffa barn. Utrikes födda kvinnor har även en hög fruktsamhet direkt efter att de invandrat till Sverige, men därefter minskar den successivt. Att fruktsamhetstalen är extra höga bland kvinnor som nyligen invandrat beror sannolikt på att många kvinnors invandring är knutet till familjebildning, och att de kommer till Sverige för att återförenas med sin familj eller för att bilda familj. 
+Födelseunderskottet minskade successivt från år 2000 och fram till 2019, för att därefter öka kraftigt fram till 2024. Utvecklingen till 2019 beror i stor grad på att de stora ålderskullar som föddes runt 1990 befunnit sig i barnafödande åldrar, samt en generös familje- och socialpolitik och en stor invandring. De som invandrade till Dalarna i mitten av 2010-talet var generellt sett unga och i en ålder när det är vanligt att skaffa barn. Utrikes födda kvinnor har även en hög fruktsamhet direkt efter att de invandrat till Sverige, men därefter minskar den successivt. Att fruktsamhetstalen är extra höga bland kvinnor som nyligen invandrat beror sannolikt på att många kvinnors invandring är knutet till familjebildning, och att de kommer till Sverige för att återförenas med sin familj eller för att bilda familj. 
 
 De senaste årens markanta minskning av födelsetalen är en fråga som förvånar demografer. Det är inte längre en lika tydlig koppling mellan makroekonomiska upp- och nedgångar eller välfärdssystemets utformning och födslar. Nedgången verkar mer vara knuten till oro inför framtiden och påverkar framför allt sannolikheten att skaffa sitt första barn. För en fördjupad genomgång av förändringar i födelsetal, se avsnitt 2.1 i [Befolkningsutvecklingen i Dalarna](https://samhallsanalys.regiondalarna.se/befolkningsutveckling){target="_blank"}^[Befolkningsutvecklingen i Dalarna, Samhällsanalys, Region Dalarna (2025-03-25).].
 
